--- a/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Aug 15 04:56:45 AM EDT 2024
+#Sun Aug 25 03:51:42 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
