--- a/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DragAndDropAcrossApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Aug 25 03:40:58 EDT 2024
+#Sun Sep  1 05:30:47 AM EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
