--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Sep  1 04:55:55 AM EDT 2024
+#Tue Sep 10 04:04:07 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-all.zip
 distributionPath=wrapper/dists
