--- a/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Sep  1 04:59:43 AM EDT 2024
+#Tue Sep 10 04:07:11 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
