--- a/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Sep  1 05:12:43 AM EDT 2024
+#Tue Sep 10 04:23:16 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
