--- a/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
+++ b/ElevationDrag/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Sep 15 05:19:10 AM EDT 2024
+#Fri Sep 27 03:53:59 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
