--- a/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/InteractiveSliceProviderKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Fri Sep 27 04:21:41 EDT 2024
+#Fri Oct  4 05:54:47 AM EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.7-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
