--- a/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
+++ b/DocumentCentricApps/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 11 05:15:58 AM EDT 2024
+#Thu Oct 24 03:46:19 EDT 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
