--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Thu Oct 24 03:36:19 EDT 2024
+#Sun Nov  3 03:58:03 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
 distributionPath=wrapper/dists
