--- a/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/TextRoundedBackgroundKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 25 03:38:48 EDT 2024
+#Mon Nov  4 06:11:06 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
