--- a/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
+++ b/WindowInsetsAnimation/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Fri Oct 25 03:50:39 EDT 2024
+#Tue Nov  5 05:46:23 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
