--- a/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
+++ b/ClippingBasic/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Nov  3 04:17:41 AM EST 2024
+#Sun Nov 10 03:32:57 EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
