--- a/AppWidget/gradle/wrapper/gradle-wrapper.properties
+++ b/AppWidget/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Nov 24 03:14:46 EST 2024
+#Thu Nov 28 05:37:13 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
 distributionPath=wrapper/dists
