--- a/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
+++ b/BasicImmersiveMode/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Nov 24 03:17:36 EST 2024
+#Thu Nov 28 05:44:18 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
