--- a/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
+++ b/SliceViewerKotlin/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Sun Nov 24 05:49:58 EST 2024
+#Fri Nov 29 06:17:39 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
