--- a/TextStyling/gradle/wrapper/gradle-wrapper.properties
+++ b/TextStyling/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,4 @@
-#Mon Nov 25 02:56:52 EST 2024
+#Fri Nov 29 06:40:57 AM EST 2024
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 distributionUrl=https\://services.gradle.org/distributions/gradle-8.9-all.zip
